@@ -1,38 +1,0 @@
-# Run Travis CI for R via Docker
-#
-# Made by Dirk Eddelbuettel in August 2018 and released under GPL (>=2)
-
-os: linux
-dist: bionic
-sudo: required
-services: docker
-
-env:
-  global:
-    - DOCKER_OPTS="--rm -ti -v ${HOME}/.ccache:/root/.ccache -v $(pwd):/mnt -w /mnt"
-      DOCKER_CNTR="rquantlib/ci"
-      R_BLD_CHK_OPTS="--no-build-vignettes --no-manual"
-      PKG_NAME=$(awk '/Package:/ {print $2}' DESCRIPTION)
-      PKG_VER=$(awk '/Version:/ {print $2}' DESCRIPTION)
-      PKG_TGZ="${PKG_NAME}_${PKG_VER}.tar.gz"
-
-before_install:
-  - docker pull ${DOCKER_CNTR}
-  - docker run ${DOCKER_OPTS} ${DOCKER_CNTR} r -p -e 'sessionInfo()'
-
-install:
-  # R packages need special treatment with ccache: temp dirs, new timestamps
-  - echo max_size = 5.0G > ~/.ccache/ccache.conf
-  - echo sloppiness = include_file_ctime >> ~/.ccache/ccache.conf
-  - echo hash_dir = false >> ~/.ccache/ccache.conf
-  - docker run ${DOCKER_OPTS} ${DOCKER_CNTR} R CMD build ${R_BLD_CHK_OPTS} .
-  # install once to generate stdout to not time out ... and fill ccache at the same time
-  - docker run ${DOCKER_OPTS} ${DOCKER_CNTR} R CMD INSTALL RQuantLib_*.tar.gz
-
-script:
-  - docker run ${DOCKER_OPTS} ${DOCKER_CNTR} R CMD check ${R_BLD_CHK_OPTS} ${PKG_TGZ}
-
-notifications:
-  email:
-    on_success: change
-    on_failure: change
